--- a/index.html
+++ b/index.html
@@ -233,9 +233,7 @@
           <div class="hero-thumb_img">
             <img src="assets/images/home-two/hero-thumb.png" alt="">
           </div>
-          <div class="doctors_shape bounce-animate">
-            <img src="assets/images/home-two/doctors.png" alt="">
-          </div>
+         
           <div class="counter-hero_bx">
             <div class="counter-single-box">
               <div class="counter_icon">
@@ -1003,7 +1001,7 @@
         <!--==================================================-->
         <!-- Start medizet Brand Section -->
         <!--==================================================-->
-        <div class="brand-section style_two">
+        <!-- <div class="brand-section style_two">
           <div class="container">
             <div class="row">
               <div class="col-lg-12">
@@ -1019,7 +1017,7 @@
                     <div class="swiper-slide">
                       <div class="brand-single-box">
                         <div class="brand-thumb">
-                          <img src="assets/images/main-home/brand2.png" alt="" />
+                          <h5></h5>
                         </div>
                       </div>
                     </div>
@@ -1084,7 +1082,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
         <!--==================================================-->
         <!-- End medizet Brand Section -->
         <!--==================================================-->
@@ -1092,7 +1090,7 @@
         <!--==================================================-->
         <!-- Start medizet Subscribe Section -->
         <!--==================================================-->
-    <div class="medizet-subscribe">
+    <div class="medizet-subscribe mt-5">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-7">
