--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
               <div class="col-lg-6 col-md-6">
                 <div class="skil_item">
                   <div class="skil_thumb">
-                    <img src="assets/images/home-two/feature-img2.png" alt="">
+                    <img src="assets/images/home-two/feature-img2.jpg"  class="img-round"  alt="">
                   </div>
                   <div class="skil-icon_bx">
                     <div class="skill-icon">
@@ -351,7 +351,7 @@
               <div class="row align-items-center">
                 <div class="col-lg-6">
                   <div class="about-thumb style_two">
-                    <img src="assets/images/home-two/about_img.png" alt="PVS Institute Image">
+                    <img src="assets/images/home-two/about_img.jpg" class="img-round" alt="PVS Institute Image">
                     <div class="about_shape bounce-animate">
                       <img src="assets/images/home-two/dot.png" alt="">
                     </div>
@@ -631,7 +631,7 @@
             <div class="row align-items-center">
               <div class="col-xl-6 col-lg-12 col-md-12">
                 <div class="about-thumb">
-                  <img src="assets/images/main-home/about_thumb.png" alt="">
+                  <img src="assets/images/main-home/about_thumb.png" class="" alt="">
                   <div class="counter-right-side style_two">
                     <div class="counter-single-box">
                       <div class="odometer-wrapper counter-box-title" data-count="16">
@@ -873,10 +873,10 @@
                     </div>
                     <div class="user-info">
                       <div class="people-pic">
-                        <img src="assets/images/home-two/testi-autor.png" alt="">
+                        <img src="assets/images/home-two/testi-autor1.jpg" class="img-round" alt="">
                       </div>
                       <div class="user-name">
-                        <h4>Anjali K.</h4>
+                        <h4>Pratheeb K.</h4>
                         <h6>Allied Health Student</h6>
                       </div>
                     </div>
@@ -904,7 +904,7 @@
                     </div>
                     <div class="user-info">
                       <div class="people-pic">
-                        <img src="assets/images/home-two/testi-autor.png" alt="">
+                        <img src="assets/images/home-two/testi-autor2.jpg" class="img-round" alt="">
                       </div>
                       <div class="user-name">
                         <h4>Rahul M.</h4>
@@ -935,7 +935,7 @@
                     </div>
                     <div class="user-info">
                       <div class="people-pic">
-                        <img src="assets/images/home-two/testi-autor.png" alt="">
+                        <img src="assets/images/home-two/testi-autor3.jpg" class="img-round" alt="">
                       </div>
                       <div class="user-name">
                         <h4>Fathima S.</h4>
@@ -967,7 +967,7 @@
     <div class="row call_action_bg align-items-center">
       <div class="col-lg-4">
         <div class="call-to_action_thumb">
-          <img src="assets/images/main-home/doctors.png" alt="PVS Institute Faculty">
+          <!-- <img src="assets/images/main-home/doctors.png" alt="PVS Institute Faculty"> -->
         </div>
       </div>
       <div class="col-lg-8">
@@ -1185,7 +1185,7 @@
                   <img src="assets/images/main-home/footer_shape1.png" alt="" />
                 </div>
                 <div class="footer-thumb2">
-                  <img src="assets/images/main-home/footer_shape2.png" alt="" />
+                  <!-- <img src="assets/images/main-home/footer_shape2.png" alt="" /> -->
                 </div>
               </div>
             </div>
